# FatCat

./: .gitignore  README.md
FatCatServer/: Cargo.toml
FatCatServer/cmd/: Cargo.toml
FatCatServer/cmd/src/: main.rs
FatCatServer/server/: Cargo.toml
FatCatServer/server/src/: http.rs
